# rufus

./: .gitignore  Cargo.toml  README.md  asset-manifest.json  index.html  precache-manifest.015525c39e12cff20fc1e0662fdde3bb.js  precache-manifest.51b56bbd2e231f723def4d22f90fc878.js  precache-manifest.5548d2484c4ebd6da68fed313934c852.js  precache-manifest.62038b505e4810d51a00ac92f8fd7c4f.js  precache-manifest.645313063d1ec3195f0f9a49e70933af.js  precache-manifest.6604abcdac0c62392fc88f8247487555.js  precache-manifest.6cf6ee005a9d19d7e48ace02a9b09b84.js  precache-manifest.78fd26ef975c47df4ff3ce2f111fee98.js  precache-manifest.918224b52018e64dc96ae19c7bed0b64.js  precache-manifest.a9ed7a524d0858a8afc08661048f0af7.js  precache-manifest.ab5bf0b42309b124a9cc26f40ef2c881.js  precache-manifest.eb95e9107675034d3e36fc3ddcb49468.js  precache-manifest.eeb81c9b5f0bcc62f93fa2a00a229545.js  service-worker.js
.github/workflows/: rust.yml
examples/: fib.ml  index.json  list.ml  list.rfs  twice.ml
rufus-core/: Cargo.toml  README.md
rufus-core/src/: cek.rs  humanizer.rs  lib.rs  parser.lalrpop  syntax.rs
rufus-core/src/syntax/: debruijn.rs  iter.rs
rufus-ext/: language-configuration.json  package-lock.json  package.json
rufus-ext/client/: tsconfig.json
rufus-ext/src/: extension.ts
rufus-ext/syntaxes/: rufus.tmGrammar.json
rufus-repl/: Cargo.toml  README.md
rufus-repl/src/: main.rs
rufus-typed/: Cargo.toml  README.md
rufus-typed/src/: check.rs  checker.rs  diagnostic.rs  grammar.lalrpop  lib.rs  location.rs  main.rs  parser.lalrpop  parser.rs  syntax.rs  util.rs
rufus-typed/src/check/: error.rs  types.rs
rufus-typed/src/location/: mapper.rs
rufus-typed/src/syntax/: debug.rs  ident.rs  iter.rs
rufus-typed/src/tests/: check.rs  checker.rs  parser.rs
rufus-typed/src/tests/check/: expressions.rs  func_resolution.rs  resolution.rs  signatures.rs  type_resolution.rs  types.rs
rufus-typed/src/tests/checker/: decls.rs  expressions.rs  type_resolution.rs  types.rs
rufus-typed/src/tests/parser/: decl.rs  expr.rs  type_.rs
rufus-ui/: README.md  package.json
rufus-ui/public/: index.html  manifest.json
rufus-ui/src/: App.css  App.tsx
rufus-wasm/: Cargo.toml  README.md
rufus-wasm/src/: lib.rs
src/: cek.rs  eval.rs  main.rs  parser.lalrpop  syntax.rs
static/css/: 2.6c934d98.chunk.css  2.6c934d98.chunk.css.map  2.bceae682.chunk.css  2.bceae682.chunk.css.map  main.cd317ff8.chunk.css  main.cd317ff8.chunk.css.map  main.cf690df4.chunk.css  main.cf690df4.chunk.css.map  main.dfca195d.chunk.css  main.dfca195d.chunk.css.map
static/js/: 2.0fb1420f.chunk.js  2.0fb1420f.chunk.js.map  2.37152009.chunk.js  2.37152009.chunk.js.map  2.4cc6252a.chunk.js  2.4cc6252a.chunk.js.map  2.51f35f7f.chunk.js  2.51f35f7f.chunk.js.map  2.6f932076.chunk.js  2.6f932076.chunk.js.map  2.834cb9da.chunk.js  2.834cb9da.chunk.js.map  2.b2e4fca6.chunk.js  2.b2e4fca6.chunk.js.map  2.baa8102e.chunk.js  2.baa8102e.chunk.js.map  2.fce16fe2.chunk.js  2.fce16fe2.chunk.js.map  3.0baab4f0.chunk.js  3.0baab4f0.chunk.js.map  3.0d5279d8.chunk.js  3.0d5279d8.chunk.js.map  3.2bd34251.chunk.js  (+69 more)
(+1 files in other folders)
