[package]
name = "rufus-repl"
version = "0.1.0"
authors = ["Martin Huschenbett <martin.huschenbett@posteo.me>"]
edition = "2018"
publish = false
description = "An experiment about a CEK machine implemented in Rust, compiled to Web Assembly and made alive via Typescript + React."
homepage = "https://hurryabit.github.io/rufus"
repository = "https://github.com/hurryabit/rufus.git"
license = "Apache 2.0"

[dependencies]
rufus-core = { path = "../rufus-core" }
lalrpop-util = "0.17.2"
rustyline = "5.0.3"
