[package]
name = "rufus-typed"
version = "0.1.0"
authors = ["Martin Huschenbett <martin.huschenbett@posteo.me>"]
edition = "2018"
publish = false
description = "An experiment about a CEK machine implemented in Rust, compiled to Web Assembly and made alive via Typescript + React."
homepage = "https://hurryabit.github.io/rufus"
repository = "https://github.com/hurryabit/rufus.git"
license = "Apache 2.0"

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }

[dependencies]
flexi_logger = "0.16.1"
genawaiter = "0.99.1"
lalrpop-util = "0.19.0"
log = "0.4.11"
lsp-server = "0.4.1"
lsp-types = "0.83.0"
regex = "1.3.9"
serde = "1.0.117"
serde_json = "1.0.59"
serde_yaml = "0.8.14"

[dev-dependencies]
insta = "1.1.0"
